smtp to appsettings

--- a/WebAppIdentity/appsettings.json
+++ b/WebAppIdentity/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Get this from key vault"
+  },
+  "SMTP": {
+    "Host": "Get this from key vault",
+    "Port": 1, 
+    "Username": "Get this from key vault",
+    "Password": "Get this from key vault",
+    "From": "Get this from key vault"
   }
 }
